--- a/package.json
+++ b/package.json
@@ -2,10 +2,8 @@
   "name": "teacherator",
   "version": "1.0.0",
   "description": "Application to rate reviews.",
-  "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./server/server.js"
   },
   "author": "Nicolas Buitrago",
   "license": "MIT",
